--- a/Stanford CS231n/assignment2/FullyConnectedNets.ipynb
+++ b/Stanford CS231n/assignment2/FullyConnectedNets.ipynb
@@ -48,18 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# As usual, a bit of setup\n",
     "from __future__ import print_function\n",
@@ -88,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -97,12 +88,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('X_test: ', (1000, 3, 32, 32))\n",
-      "('y_test: ', (1000,))\n",
-      "('X_val: ', (1000, 3, 32, 32))\n",
-      "('X_train: ', (49000, 3, 32, 32))\n",
       "('y_train: ', (49000,))\n",
-      "('y_val: ', (1000,))\n"
+      "('X_test: ', (1000, 3, 32, 32))\n",
+      "('y_val: ', (1000,))\n",
+      "('X_train: ', (49000, 3, 32, 32))\n",
+      "('X_val: ', (1000, 3, 32, 32))\n",
+      "('y_test: ', (1000,))\n"
      ]
     }
    ],
@@ -126,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
