--- a/Stanford CS231n/assignment2/FullyConnectedNets.ipynb
+++ b/Stanford CS231n/assignment2/FullyConnectedNets.ipynb
@@ -50,7 +50,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "run the following from the cs231n directory and try again:\n",
+      "python setup.py build_ext --inplace\n",
+      "You may also need to restart your iPython kernel\n"
+     ]
+    }
+   ],
    "source": [
     "# As usual, a bit of setup\n",
     "from __future__ import print_function\n",
@@ -79,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -88,11 +98,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('y_train: ', (49000,))\n",
-      "('X_test: ', (1000, 3, 32, 32))\n",
-      "('y_val: ', (1000,))\n",
       "('X_train: ', (49000, 3, 32, 32))\n",
+      "('y_train: ', (49000,))\n",
       "('X_val: ', (1000, 3, 32, 32))\n",
+      "('y_val: ', (1000,))\n",
+      "('X_test: ', (1000, 3, 32, 32))\n",
       "('y_test: ', (1000,))\n"
      ]
     }
@@ -117,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +135,7 @@
      "output_type": "stream",
      "text": [
       "Testing affine_forward function:\n",
-      "difference:  9.7698488884e-10\n"
+      "difference:  9.76985004799e-10\n"
      ]
     }
    ],
@@ -162,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +303,7 @@
      "text": [
       "Testing affine_relu_forward:\n",
       "dx error:  6.39553504205e-11\n",
-      "dw error:  8.16201557044e-11\n",
+      "dw error:  8.16201110576e-11\n",
       "db error:  7.82672402146e-12\n"
      ]
     }
@@ -331,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -394,15 +404,15 @@
       "Testing test-time forward pass ... \n",
       "Testing training loss (no regularization)\n",
       "Running numeric gradient check with reg =  0.0\n",
-      "W1 relative error: 1.83e-08\n",
-      "W2 relative error: 3.37e-10\n",
-      "b1 relative error: 8.01e-09\n",
+      "W1 relative error: 1.22e-08\n",
+      "W2 relative error: 3.17e-10\n",
+      "b1 relative error: 6.19e-09\n",
       "b2 relative error: 4.33e-10\n",
       "Running numeric gradient check with reg =  0.7\n",
       "W1 relative error: 2.53e-07\n",
-      "W2 relative error: 2.85e-08\n",
-      "b1 relative error: 1.35e-08\n",
-      "b2 relative error: 1.97e-09\n"
+      "W2 relative error: 1.37e-07\n",
+      "b1 relative error: 1.56e-08\n",
+      "b2 relative error: 9.09e-10\n"
      ]
     }
    ],
@@ -473,18 +483,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Iteration 1 / 4900) loss: 3.843409\n",
+      "(Epoch 0 / 10) train acc: 0.105000; val_acc: 0.122000\n",
+      "(Epoch 1 / 10) train acc: 0.358000; val_acc: 0.375000\n",
+      "(Iteration 701 / 4900) loss: 1.954483\n",
+      "(Epoch 2 / 10) train acc: 0.354000; val_acc: 0.376000\n",
+      "(Iteration 1401 / 4900) loss: 2.040498\n",
+      "(Epoch 3 / 10) train acc: 0.389000; val_acc: 0.400000\n",
+      "(Epoch 4 / 10) train acc: 0.386000; val_acc: 0.393000\n",
+      "(Iteration 2101 / 4900) loss: 2.125328\n",
+      "(Epoch 5 / 10) train acc: 0.369000; val_acc: 0.391000\n",
+      "(Iteration 2801 / 4900) loss: 1.927182\n",
+      "(Epoch 6 / 10) train acc: 0.345000; val_acc: 0.382000\n",
+      "(Epoch 7 / 10) train acc: 0.405000; val_acc: 0.391000\n",
+      "(Iteration 3501 / 4900) loss: 2.031124\n",
+      "(Epoch 8 / 10) train acc: 0.356000; val_acc: 0.386000\n",
+      "(Iteration 4201 / 4900) loss: 1.795749\n",
+      "(Epoch 9 / 10) train acc: 0.371000; val_acc: 0.378000\n",
+      "(Epoch 10 / 10) train acc: 0.388000; val_acc: 0.408000\n"
+     ]
+    }
+   ],
    "source": [
-    "model = TwoLayerNet()\n",
-    "solver = None\n",
+    "model = TwoLayerNet(reg = 100)\n",
+    "solver  = None\n",
     "\n",
     "##############################################################################\n",
     "# TODO: Use a Solver instance to train a TwoLayerNet that achieves at least  #\n",
     "# 50% accuracy on the validation set.                                        #\n",
     "##############################################################################\n",
-    "pass\n",
+    "solver = Solver(model, data, print_every = 700\n",
+    "               )\n",
+    "solver.train()\n",
     "##############################################################################\n",
     "#                             END OF YOUR CODE                               #\n",
     "##############################################################################"
@@ -996,7 +1033,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
