--- a/Stanford CS231n/assignment3/RNN_Captioning.ipynb
+++ b/Stanford CS231n/assignment3/RNN_Captioning.ipynb
@@ -314,9 +314,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h error:  7.72846615831e-08\n"
+     ]
+    }
+   ],
    "source": [
     "N, T, D, H = 2, 3, 4, 5\n",
     "\n",
