--- a/Stanford CS231n/assignment3/RNN_Captioning.ipynb
+++ b/Stanford CS231n/assignment3/RNN_Captioning.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -358,9 +358,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx error:  1.53195029646e-09\n",
+      "dh0 error:  3.37468980575e-09\n",
+      "dWx error:  7.42724328043e-09\n",
+      "dWh error:  1.31183532227e-07\n",
+      "db error:  3.08337619924e-10\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "\n",
